# routers/api/upload.go
@@ -18,11 +18,11 @@ import (
 )
 
 // @Summary Import Image
-// @Produce json
+// @Accept multipart/form-data
 // @Param image formData file true "Image File"
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
-// @Router /api/v1/tags/import [post]
+// @Router /upload [post]
 func UploadImage(c *gin.Context) {
 	appG := app.Gin{C: c}
 	file, image, err := c.Request.FormFile("image")
