# routers/router.go
@@ -46,6 +46,8 @@ func InitRouter() *gin.Engine {
 		apiv1.PUT("/tags/:id", v1.EditTag)
 		// 删除指定标签
 		apiv1.DELETE("/tags/:id", v1.DeleteTag)
+		//  导出标签
+		apiv1.POST("/tags/export", v1.ExportTag)
 
 		// 获取文章列表
 		apiv1.GET("/articles", v1.GetArticles)
